Add radius account module

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "php": ">=5.3.23",
         "zendframework/zendframework": "~2.4",
         "zfcampus/zf-apigility": "~1.0",
-        "zfcampus/zf-apigility-documentation": ">=1.0.5,<2.0.0"
+        "zfcampus/zf-apigility-documentation": ">=1.0.5,<2.0.0",
+        "zfcampus/statuslib-example": "~1.0-dev"
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
