--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "zendframework/zendframework": "~2.4",
         "zfcampus/zf-apigility": "~1.1",
         "zfcampus/zf-apigility-documentation": "^1.0.5",
-        "zfcampus/zf-development-mode": "~2.0"
+        "zfcampus/zf-development-mode": "~2.0",
+        "phpseclib/phpseclib": "~2.0" 
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
