Revert "Add Cross domain for js client to call, update base mapper to accept orderby & sort, getClientConfigs webservice"
This reverts commit 2d39133e46fc42891331e50656add1af64108138.

--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "zfcampus/zf-apigility": "~1.1",
         "zfcampus/zf-apigility-documentation": "^1.0.5",
         "zfcampus/zf-development-mode": "~2.0",
-        "phpseclib/phpseclib": "~2.0",
-        "zfr/zfr-cors": "1.*" 
+        "phpseclib/phpseclib": "~2.0" 
     },
     "require-dev": {
         "zendframework/zftool": "dev-master",
